<resources>
    <string name="app_name">OnePercentBetter</string>

    <string name="get_started_introduction">Fique mais próximo dos seus objetivos.</string>
    <string name="get_started_description">Torne-se 1% melhor a cada dia, concentre-se nas pequenas ações que você pode fazer hoje e se aproxime cada vez mais de onde você quer estar amanhã.</string>
    <string name="home">Home</string>
    <string name="progress">Progresso</string>
    <string name="profile">Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="create_account">Crie uma conta</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="daily_goal">Meta diária</string>
    <string name="delete_account">Excluir Conta</string>
    <string name="learned">Aprendeu</string>
    <string name="improved">Aprimorou</string>
    <string name="title">Título</string>
    <string name="difficulty_level">Nível de dificuldade</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="full_name">Nome Completo</string>
    <string name="btn_login_text">Entrar</string>

    <string name="accessibility_add">Adicionar Hábito</string>
    <string name="invalid_title">É necessário adicionar um título.</string>
    <string name="saved_message">Item salvo com sucesso.</string>
    <string name="failure_message">Não foi possível salvar o item</string>
    <string name="login_question">Não tem uma conta? </string>
    <string name="register_onclick">registre-se</string>
    <string name="register_question">Já tem uma conta? Faça o </string>
    <string name="empty_field">Campo vazio</string>
</resources>