<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIntroduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_started_introduction"
            android:textAlignment="center"
            android:textColor="@color/black_light"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/ivLogo"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_started_description"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/tvIntroduction"
            app:layout_constraintStart_toStartOf="@id/tvIntroduction"
            app:layout_constraintTop_toBottomOf="@id/tvIntroduction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_rounded_shape"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/button_rounded_shape_white_bg"
                android:clickable="true"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnRegister"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>